--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,7 @@ body {
 }
 
 #container {
-  /*margin: 0 auto;*/
-
-    margin: auto;
+  margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
 
@@ -73,7 +71,6 @@ body {
 
 #logo h1 span {
   font-size: small;
-
 }
 
 /*#logo h2 {
@@ -183,9 +180,9 @@ button.pressed {
   background: -ms-radial-gradient(center, ellipse cover,  #ffaf9b 0%,#ff3700 74%,#ff3700 74%); /* IE10+ */
   background: radial-gradient(ellipse at center,  #ffaf9b 0%,#ff3700 74%,#ff3700 74%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffaf9b', endColorstr='#ff3700',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
--webkit-box-shadow: -2px -2px 65px -2px rgba(240,137,63,1);
--moz-box-shadow: -2px -2px 65px -2px rgba(240,137,63,1);
-box-shadow: -2px -2px 65px -2px rgba(240,137,63,1);
+  -webkit-box-shadow: -2px -2px 65px -2px rgba(240,137,63,1);
+  -moz-box-shadow: -2px -2px 65px -2px rgba(240,137,63,1);
+  box-shadow: -2px -2px 65px -2px rgba(240,137,63,1);
 }
 
 /*#pads button.active {
@@ -216,13 +213,17 @@ box-shadow: -2px -2px 65px -2px rgba(240,137,63,1);
   display: block;
   width: 250px;
   height: 50px;
-  padding: 10px 20px 10px 20px;
+  /*padding: 10px 20px 10px 20px;*/
   margin-left: 60px;
   margin-bottom: 10px;
-  font-size: 1.5em;
-  font-family: 'Play';
-  /*text-align: left;*/
+  /*font-size: 1.5em;*/
+  /*font-family: 'Play';*/
+  text-align: right;
   color: black;
+  padding-top: 20px;
+  font-family: 'Digital-7';
+  font-size: 1.8em;
+
 /*  -webkit-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
   -moz-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
   box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);*/
@@ -238,20 +239,17 @@ box-shadow: -2px -2px 65px -2px rgba(240,137,63,1);
 
 #transport #banks button:focus {
   outline: 0;
-}
-
-#transport #banks button:hover {
-background: #ffffff; /* Old browsers */
-background: -moz-radial-gradient(center, ellipse cover,  #ffffff 0%, #a600bc 75%); /* FF3.6+ */
-background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffffff), color-stop(75%,#a600bc)); /* Chrome,Safari4+ */
-background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 0%,#a600bc 75%); /* Chrome10+,Safari5.1+ */
-background: -o-radial-gradient(center, ellipse cover,  #ffffff 0%,#a600bc 75%); /* Opera 12+ */
-background: -ms-radial-gradient(center, ellipse cover,  #ffffff 0%,#a600bc 75%); /* IE10+ */
-background: radial-gradient(ellipse at center,  #ffffff 0%,#a600bc 75%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#a600bc',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
--webkit-box-shadow: 0px 0px 86px -4px rgba(176,69,190,1);
--moz-box-shadow: 0px 0px 86px -4px rgba(176,69,190,1);
-box-shadow: 0px 0px 86px -4px rgba(176,69,190,1);
+  background: #ffffff; /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover,  #ffffff 0%, #a600bc 75%); /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffffff), color-stop(75%,#a600bc)); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 0%,#a600bc 75%); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover,  #ffffff 0%,#a600bc 75%); /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover,  #ffffff 0%,#a600bc 75%); /* IE10+ */
+  background: radial-gradient(ellipse at center,  #ffffff 0%,#a600bc 75%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#a600bc',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  -webkit-box-shadow: 0px 0px 86px -4px rgba(176,69,190,1);
+  -moz-box-shadow: 0px 0px 86px -4px rgba(176,69,190,1);
+  box-shadow: 0px 0px 86px -4px rgba(176,69,190,1);
 }
 
 #transport #track {
@@ -261,14 +259,14 @@ box-shadow: 0px 0px 86px -4px rgba(176,69,190,1);
 #transport #track button{
   width: 60px;
   height: 40px;
-background: #ffffff; /* Old browsers */
-background: -moz-radial-gradient(center, ellipse cover,  #ffffff 0%, #00ef4f 77%, #00f052 77%); /* FF3.6+ */
-background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffffff), color-stop(77%,#00ef4f), color-stop(77%,#00f052)); /* Chrome,Safari4+ */
-background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 0%,#00ef4f 77%,#00f052 77%); /* Chrome10+,Safari5.1+ */
-background: -o-radial-gradient(center, ellipse cover,  #ffffff 0%,#00ef4f 77%,#00f052 77%); /* Opera 12+ */
-background: -ms-radial-gradient(center, ellipse cover,  #ffffff 0%,#00ef4f 77%,#00f052 77%); /* IE10+ */
-background: radial-gradient(ellipse at center,  #ffffff 0%,#00ef4f 77%,#00f052 77%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00f052',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background: #ffffff; /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover,  #ffffff 0%, #00ef4f 77%, #00f052 77%); /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffffff), color-stop(77%,#00ef4f), color-stop(77%,#00f052)); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 0%,#00ef4f 77%,#00f052 77%); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover,  #ffffff 0%,#00ef4f 77%,#00f052 77%); /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover,  #ffffff 0%,#00ef4f 77%,#00f052 77%); /* IE10+ */
+  background: radial-gradient(ellipse at center,  #ffffff 0%,#00ef4f 77%,#00f052 77%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00f052',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
 }
 
@@ -277,33 +275,33 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
   margin: 0 auto;
 }
 
-#transport #track button:hover {
-background: #ffffff; /* Old browsers */
-background: -moz-radial-gradient(center, ellipse cover,  #ffffff 0%, #00dd56 52%); /* FF3.6+ */
-background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffffff), color-stop(52%,#00dd56)); /* Chrome,Safari4+ */
-background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 0%,#00dd56 52%); /* Chrome10+,Safari5.1+ */
-background: -o-radial-gradient(center, ellipse cover,  #ffffff 0%,#00dd56 52%); /* Opera 12+ */
-background: -ms-radial-gradient(center, ellipse cover,  #ffffff 0%,#00dd56 52%); /* IE10+ */
-background: radial-gradient(ellipse at center,  #ffffff 0%,#00dd56 52%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00dd56',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+#transport #track button:focus {
+  background: #ffffff; /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover,  #ffffff 0%, #00dd56 52%); /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffffff), color-stop(52%,#00dd56)); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 0%,#00dd56 52%); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover,  #ffffff 0%,#00dd56 52%); /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover,  #ffffff 0%,#00dd56 52%); /* IE10+ */
+  background: radial-gradient(ellipse at center,  #ffffff 0%,#00dd56 52%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00dd56',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
--webkit-box-shadow: -2px -2px 65px -8px rgba(0,238,77,1);
--moz-box-shadow: -2px -2px 65px -8px rgba(0,238,77,1);
-box-shadow: -2px -2px 65px -8px rgba(0,238,77,1);
+  -webkit-box-shadow: -2px -2px 65px -8px rgba(0,238,77,1);
+  -moz-box-shadow: -2px -2px 65px -8px rgba(0,238,77,1);
+  box-shadow: -2px -2px 65px -8px rgba(0,238,77,1);
 }
 
-#transport #track #record:hover {
-background: #e3ffdd; /* Old browsers */
-background: -moz-radial-gradient(center, ellipse cover,  #e3ffdd 4%, #df0a35 78%); /* FF3.6+ */
-background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(4%,#e3ffdd), color-stop(78%,#df0a35)); /* Chrome,Safari4+ */
-background: -webkit-radial-gradient(center, ellipse cover,  #e3ffdd 4%,#df0a35 78%); /* Chrome10+,Safari5.1+ */
-background: -o-radial-gradient(center, ellipse cover,  #e3ffdd 4%,#df0a35 78%); /* Opera 12+ */
-background: -ms-radial-gradient(center, ellipse cover,  #e3ffdd 4%,#df0a35 78%); /* IE10+ */
-background: radial-gradient(ellipse at center,  #e3ffdd 4%,#df0a35 78%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e3ffdd', endColorstr='#df0a35',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
--webkit-box-shadow: -2px -2px 65px -8px rgba(255,22,88,1);
--moz-box-shadow: -2px -2px 65px -8px rgba(255,22,88,1);
-box-shadow: -2px -2px 65px -4px rgba(255,22,88,1);
+#transport #track #record:focus {
+  background: #e3ffdd; /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover,  #e3ffdd 4%, #df0a35 78%); /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(4%,#e3ffdd), color-stop(78%,#df0a35)); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover,  #e3ffdd 4%,#df0a35 78%); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover,  #e3ffdd 4%,#df0a35 78%); /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover,  #e3ffdd 4%,#df0a35 78%); /* IE10+ */
+  background: radial-gradient(ellipse at center,  #e3ffdd 4%,#df0a35 78%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e3ffdd', endColorstr='#df0a35',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  -webkit-box-shadow: -2px -2px 65px -8px rgba(255,22,88,1);
+  -moz-box-shadow: -2px -2px 65px -8px rgba(255,22,88,1);
+  box-shadow: -2px -2px 65px -4px rgba(255,22,88,1);
 }
 
 
@@ -342,18 +340,18 @@ box-shadow: -2px -2px 65px -4px rgba(255,22,88,1);
   text-decoration: none;
   color: white;
   /*color:#228DFF;*/
-  font-family:PressStart;
+  font-family:"PressStart";
   font-size: 0.9em;
   padding: 10px;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 #container .about a:hover {
-  -webkit-animation: neon2 1.5s ease-in-out infinite alternate;
-  -moz-animation: neon2 1.5s ease-in-out infinite alternate;
-  animation: neon2 1.5s ease-in-out infinite alternate;
+  -webkit-animation: neon2 0.5s ease-in-out infinite alternate;
+  -moz-animation: neon2 0.5s ease-in-out infinite alternate;
+  animation: neon2 0.5s ease-in-out infinite alternate;
 }
 
 /*//////////////*/
