--- a/css/style.css
+++ b/css/style.css
@@ -43,15 +43,6 @@ body {
   float: left;
 }
 
-
-/*#logo h2 {
-  font-weight: 400;
-  font-size: 90%;
-  letter-spacing: 4px;
-  word-spacing: 7px;
-  color: #555;
-}*/
-
 #logo {
   width: 335px;
   margin-left: 15px;
@@ -72,12 +63,6 @@ body {
 #logo h1 span {
   font-size: small;
 }
-
-/*#logo h2 {
-  font-size: 1em;
-  padding-left: 15px;
-  color: white;
-}*/
 
 #screen {
   /*background: -webkit-linear-gradient(bottom, rgb(60,60,60) 0%, rgb(90,90,90) 100%);*/
@@ -112,10 +97,15 @@ body {
 
 #screen .titles {
   padding: 5px;
-  font-size: 1.2em;
+  font-size: .9em;
   font-family: "Digital-7";
   color: black;
 }
+
+#screen .titles span {
+  color: #555;
+}
+
 #pads {
   width: 535px;
   /*background: -webkit-linear-gradient(bottom, rgb(80,96,97) 0%, rgb(99,119,122) 100%);*/
@@ -139,37 +129,29 @@ body {
   background: radial-gradient(ellipse at center,  #ebffa3 0%,#ff5c2b 76%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebffa3', endColorstr='#ff5c2b',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
-
-/*  background: -webkit-linear-gradient(bottom, rgb(166,166,166) 0%, rgb(189,189,189) 80%, rgb(209,209,209) 96%);
-  background: #39FF14;*/
   box-shadow: 0 0 3px #222;
   border: none;
   height: 110px;
   width:  110px;
   margin: 10px;
   text-shadow:  0 1px 2px #fff;
-  font-size: 90%;
-  text-align: right;
+  /*text-align: right;*/
+
   padding-top: 85px;
   display: inline-block;
-  font-family: 'Digital-7';
-  font-size: 1.5em;
+  font-family: 'PressStart'
+  font-size: 1.2em;
   color: black;
 /*  -webkit-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .30);
   -moz-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .30);
   box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .30);*/
 }
-
+/*
 @-webkit-keyframes pad_hit {
   0%   { background: #f56b6b; }
   100% { background: #ca8f8f; }
-}
-
-
-
-/*button.pressed {
-  -webkit-animation: pad_hit 0.1s 1;
 }*/
+
 
 #pads button:hover {
   background: #ffaf9b; /* Old browsers */
