--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body {
 }*/
 
 
-#pads button:hover {
+#pads button:active {
   background: #ffaf9b; /* Old browsers */
   background: -moz-radial-gradient(center, ellipse cover,  #ffaf9b 0%, #ff3700 74%, #ff3700 74%); /* FF3.6+ */
   background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffaf9b), color-stop(74%,#ff3700), color-stop(74%,#ff3700)); /* Chrome,Safari4+ */
