--- a/css/style.css
+++ b/css/style.css
@@ -4,30 +4,23 @@
 }
 
 body {
-  height: 100%;
-  font-family: "Arial", Helvetica, Geneva, sans-serif;
-  clear:both;
-  background: #837393;
+  background-image: url(/images/background.jpg);
 }
 
+
 #container {
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 20px auto;
+  position: relative;
   padding-top: 0;
   padding-bottom: 10px;
   padding-left: 30px;
   padding-right: 30px;
   width: 950px;
   height: 600px;
-  /*background: -webkit-linear-gradient(bottom, rgb(191,194,188) 0%, rgb(206,210,201) 50%);*/
-  background: #2e2e2e;
+  background-image: url(/images/metal.png);
   box-shadow: 0px 0px 25px #111 inset, 0px 5px 5px #111;
   border: 2px solid #333;
   border-radius: 20px
-
 }
 
 #left {
@@ -92,7 +85,7 @@ body {
 
 #pads {
   width: 535px;
-  background: #2e2e2e;
+  background: transparent;
   padding: 15px;
   vertical-align: baseline;
   border-radius: 10px;
@@ -284,6 +277,55 @@ body {
 #transport button:focus {
   outline: 0;
 }
+
+.form {
+  width: 60px;
+/*background: white;*/
+padding: 5px;
+margin: 0 auto;
+/*display: inline-flex;*/
+display: inline-block;
+position: absolute;
+}
+
+#transport #bpm {
+  width: 44px;
+  background: #fff;
+  color: black;
+}
+
+#submit-button {
+   border-top: 1px solid #000000;
+   background: #ffffff;
+   background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#ffffff));
+   background: -webkit-linear-gradient(top, #ffffff, #ffffff);
+   background: -moz-linear-gradient(top, #ffffff, #ffffff);
+   background: -ms-linear-gradient(top, #ffffff, #ffffff);
+   background: -o-linear-gradient(top, #ffffff, #ffffff);
+   padding: 3.5px 7px;
+   -webkit-border-radius: 40px;
+   -moz-border-radius: 40px;
+   border-radius: 40px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: #000000;
+   font-size: 9px;
+   font-family: 'Ubuntu', Helvetica, Arial, Sans-Serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+.submit:hover {
+   border-top-color: #515354;
+   background: #515354;
+   color: #ccc;
+   }
+.submit:active {
+   border-top-color: #0099ff;
+   background: #0099ff;
+   }
+
 
 #container .about {
   position: absolute;
