--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ body {
   text-shadow:  0 1px 2px #fff;
   padding-top: 85px;
   display: inline-block;
-  font-family: 'Ubuntu';
+  font-family: 'Arial';
   font-size: 1.2em;
   color: black;
 }
@@ -302,8 +302,12 @@ padding-left: 10px;
   color : #000;
   padding : 2px 7px;
   background-color : #03ee51;
-  font-family: 'Ubuntu';
+  font-family: 'Arial';
   width:  50px;
+}
+
+#submit-button:focus {
+  outline: none;
 }
 
 
@@ -320,7 +324,7 @@ padding-left: 10px;
 #container .about a {
   text-decoration: none;
   color: white;
-  font-family:"Ubuntu";
+  font-family:"Arial";
   font-size: 1.1em;
   padding: 10px;
   -webkit-transition: all 0.2s;
