--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url(/images/background.jpg);
+  background-image: url(../images/background.jpg);
 }
 
 #container {
@@ -16,7 +16,7 @@ body {
   padding-right: 30px;
   width: 950px;
   height: 600px;
-  background-image: url(/images/metal.png);
+  background-image: url(../images/metal.png);
   box-shadow: 0px 0px 25px #111 inset, 0px 5px 5px #111;
   border: 2px solid #333;
   border-radius: 20px
