--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 
 body {
   background: url(../images/background.jpg) center no-repeat;
+  background-size: cover;
   width: 100%;
   height: 100%;
 }
